--- a/blog/src/views/all.jade
+++ b/blog/src/views/all.jade
@@ -6,8 +6,14 @@ html
 		a(href='/profile') Go back
 		br
 		a(href='/post') Post something
-		h2 Blog posts
+		br
+		h1 Blog posts
 		div
 			each post in posts
-				p= post.title
+				h3= post.title
 				p= post.body
+		h2 Find a post
+		form(action='/search' method='post')
+				label post
+				input#title(name='title' required)
+				input(type='submit' value='login' id='submit')
