--- a/blog/src/views/post.jade
+++ b/blog/src/views/post.jade
@@ -3,14 +3,14 @@ html
 	head
 		script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 	body
-		h2= post.title
+		h1= post.title
 		h3= post.title
 		div
 			each comment in comments
-				p= comment.title
+				h2= comment.title
 				p= comment.body
 				
-		h3 Write a comment
+		h2 Write a comment
 		div
 			form(action='/comment',method='post')
 				div(data-role='fieldcontain')
