--- a/blog/src/views/register.jade
+++ b/blog/src/views/register.jade
@@ -3,6 +3,7 @@ html
 	head
 		script(src="https://code.jquery.com/jquery-2.2.0.min.js")
 	body
+		h1 Register for an account
 		form(action='/register' method='post')
 			label username
 			input#username(name='username' required)
