--- a/blog/src/views/posts.jade
+++ b/blog/src/views/posts.jade
@@ -3,18 +3,30 @@ html
 	head
 		script(src="https://code.jquery.com/jquery-2.2.0.min.js")
 	body
-		a(href='/post') Post something
-		br
 		a(href='/profile') Go back
 		h1 Your posts
 		div
 			each post in posts
 				h3= post.title
-				p= post.body
+				h4= post.body
 				p posted by:
 				p= post.author
 		h2 Find a post
 		form(action='/search' method='post')
 				label post
 				input#title(name='title' required)
-				input(type='submit' value='login' id='submit')
+				input(type='submit' value='search' id='submit')
+		h2 Post something
+		div
+			form(action='/post',method='post')
+				div(data-role='fieldcontain')
+					fieldset(data-role='controlgroup')
+						label(for='title') Title: 
+							input(id='title',type='text',value='',placeholder='',name='title')
+				div(data-role='fieldcontain')
+					fieldset(data-role='controlgroup')
+						label(for='body') Body: 
+							input(id='body',type='text',value='',placeholder='',name='body')
+				div(data-role='fieldcontain')   
+					input(type='submit',value='Add',data-transition='fade', data-theme='c')
+
